1440px: fixed vertical gap. 320px: fixed font size card__title. vertical gap between cards. bottom gap of cards.

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,8 +1,3 @@
-.card {
-  margin-top: 20px;
-}
-
-
 .card__image {
   height: 413px;
   width: 100%;
@@ -15,6 +10,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 12px;
 }
 
 .card__title {
@@ -27,12 +23,12 @@
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   max-width: 413px;
-  margin: 12px 0 0 0;
+  margin: 0;
 }
 
 .card__like-button {
   background-image: url(../images/like-button.svg);
-  width: 32px;
+  width: 23px;
   height: 20px;
   background-position: center;
   background-repeat: no-repeat;
@@ -40,6 +36,8 @@
   background-color: transparent;
   opacity: 40%;
   transition: 0.3s ease-in-out;
+  padding: 0;
+  flex-shrink: 0;
 }
 
 .card__like-button:hover {
@@ -54,5 +52,7 @@
 
   .card__title {
     max-width: 388px;
+    line-height: 1;
+    font-size: 16px;
   }
 }
