--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -14,7 +14,12 @@
 }
 
 @media screen and (max-width: 627px) {
+  .cards {
+    padding-bottom: 20px;
+  }
+
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
+    gap: 20px;
   }
 }
