--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,6 +2,7 @@
   padding: 34px 0 20px;
   display: flex;
   border-bottom: 1px rgb(33, 33, 33, 0.4) solid;
+  margin-bottom: 20px;
 }
 
 .profile__avatar {
